<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="obj"
            type="com.babapanda.gitpr.presentation.model.PRUiModel" />

        <variable
            name="handler"
            type="com.babapanda.gitpr.base.BaseHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_repo_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:paddingTop="@dimen/margin_16dp"
        android:paddingBottom="@dimen/margin_16dp">

        <ImageView
            android:id="@+id/iv_repo"
            android:layout_width="@dimen/margin_100dp"
            android:layout_height="@dimen/margin_100dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:contentDescription="@string/text_repo_image"
            app:imageUrl="@{obj.avatarUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholder="@{@drawable/ic_launcher}"
            tools:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tv_author"
            style="@style/ItemTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:text="@{obj.userName}"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/tv_repo"
            style="@style/ItemTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_6dp"
            android:text="@{obj.repoName}"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_author"
            tools:text="@string/app_name" />

        <TextView
            android:id="@+id/created_date"
            style="@style/ItemDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/text_created_date"
            app:layout_constraintEnd_toStartOf="@id/tv_created_date"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tv_repo" />

        <TextView
            android:id="@+id/tv_created_date"
            style="@style/ItemDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{obj.createDate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/created_date"
            app:layout_constraintTop_toBottomOf="@id/tv_repo" />

        <TextView
            android:id="@+id/closed_date"
            style="@style/ItemDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/text_closed_date"
            app:layout_constraintEnd_toStartOf="@id/tv_closed_date"
            app:layout_constraintStart_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/created_date" />

        <TextView
            android:id="@+id/tv_closed_date"
            style="@style/ItemDescriptionStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{obj.closedDate}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/closed_date"
            app:layout_constraintTop_toBottomOf="@id/created_date" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="iv_repo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>